--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,4 @@
-@import "imports/variables.css";
+@import "variables.css";
 
 /* global styles
 --------------------*/
@@ -11,17 +11,325 @@ html {
   box-sizing: inherit;
 }
 body {
-  background-color: fff;
+  background-color: var(--white);
+  color: 000;
+  font-family: var(--sofia);
+  font-size: 1rem;
+  width: 100%;
+  margin: 0;
 }
-
+.fa {
+  color: var(--white);
+  font-size: 2.5rem;
+  display: block;
+}
+figure {
+  display: block;
+}
+img {
+  display: block;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
 /* header 
 --------------------*/
-
+.header-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.logo {
+  display: block;
+  width: 200px;
+  margin: 0 auto;
+}
+.logo img {
+  display: block;
+  width: 200px;
+}
+nav.icons {
+  display: flex;
+  justify-content: space-between;
+  width: 82%;
+  margin: 0 auto;
+  background-color: aqua;
+}
+.icon {
+  color: var(--purple);
+}
+.icons li {
+  list-style: none;
+}
+nav.menu {
+  background-color: var(--magenta);
+  color: var(--white);
+  font-family: var(--proxima-soft);
+  font-size: 1.5rem;
+  width: 100%;
+  display: flex;
+  border-radius: 0 50px 0 0;
+  margin-bottom: 0;
+}
+.fa-bars {
+  font-size: 1.875rem;
+}
+ul.small-screen {
+  /* background-color: navy; */
+  margin: 0 0 0 2rem;
+  padding: 0;
+}
+.small-screen label p {
+  display: block;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin: 0;
+}
+ul.large-screen {
+  display: none;
+  justify-content: space-around;
+  width: 100%;
+}
+ul li {
+  list-style: none;
+}
+#visit {
+  margin-bottom: 20px;
+}
+.small-screen li {
+  display: block;
+  float: left;
+  clear: left;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.hamburger-label {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+#menu {
+  display: inline-block;
+  padding-left: 20px;
+}
+#hamburger-menu {
+  display: none;
+}
+#hamburger-menu:checked ~ li {
+  display: none;
+}
 /* main 
 --------------------*/
+main {
+  text-align: center;
+}
+.background-container {
+  width: 100%;
+  color: var(--white);
+  background-image: url(../images/robot-main.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 0;
+}
+.main-wrapper {
+  width: 90%;
+  margin: 0 auto;
+}
+.main-content {
+  font-family: var(--sofia);
+}
+h1 {
+  font-family: var(--proxima);
+  font-size: 2.5rem;
+  margin-top: 0;
+  padding-top: 32px;
+  background-color: olive;
+}
+h2 {
+  font-size: 1.25rem;
+}
+.clock {
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: lightseagreen; */
+}
+.fa-clock {
+  color: var(--white);
+}
+.button p {
+  display: inline-block;
+  text-align: center;
+  border-radius: 15px;
+  background-color: #210759;
+  color: var(--white);
+  padding: 10px 50px;
+}
+#ticketmaster {
+  width: 150px;
+  margin: 0 auto;
+}
+aside {
+  text-align: center;
+}
+.bubble {
+  color: var(--purple);
+  height: 135px;
+  margin: 0 auto;
+}
+h3 {
+  font-family: var(--proxima-soft);
+  font-size: 1.125rem;
+  background-color: var(--white);
+  margin-bottom: 0;
+  padding-top: 32px;
+  padding-bottom: 20px;
+  border-radius: 50px 50px 0 0;
+}
+.bubble p {
+  background-color: var(--white);
+  margin-top: 0;
+  padding-bottom: 32px;
+  border-radius: 0 0 50px 50px;
+}
+.bubble span {
+  color: var(--dark-purple);
+}
+.categories {
+  /* background-color: lime; */
+  font-family: var(--proxima-soft);
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+  margin: 70px auto 32px auto;
+}
+.color-box {
+  color: var(--white);
+  text-align: center;
+  height: 156px;
+}
+.color-box a {
+  text-decoration: none;
+}
+#cosmology {
+  background-color: #470c68;
+}
+#evolution {
+  background-color: #007298;
+}
+#biology {
+  background-color: #034638;
+}
+#robotics {
+  background-color: #dc4405;
+}
+#ecology {
+  background-color: #a20067;
+}
+#events {
+  background-color: #003057;
+}
+h4 {
+  color: var(--white);
+}
+.news {
+  width: 100%;
+}
+h5 {
+  font-family: var(--proxima);
+  font-size: 1.125rem;
+  background-color: var(--dark-blue);
+  display: block;
+  padding: 15px 0;
+  text-align: center;
+}
+figure.news {
+  width: 100%;
+}
+h6 {
+  font-size: 1.125rem;
+}
+div.news {
+  color: #000;
+  background-color: #fff;
+  font-family: var(--neue-haas);
+}
+.image-wrapper {
+  display: flex;
+  justify-content: space-between;
+  /* background-color: limegreen; */
+}
+section.newsletter {
+  background-image: url(../images/newsletter.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+form.newsletter {
+  background-color: mediumvioletred;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  height: 40px;
+  margin: 0 auto;
+}
+#newsletter {
+  width: 70%;
+  height: 40px;
+  border: 3px solid var(--purple);
+  padding-left: 20px;
+}
+#sign-up {
+  width: 30%;
+  height: 40px;
+  border: 3px solid var(--purple);
+  background-color: var(--purple);
+  color: #fff;
+}
 
 /* footer 
 --------------------*/
+.footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--teal);
+  color: #fff;
+}
+.footer-container {
+  margin-left: 5%;
+}
+.footer-container ul li {
+  list-style: none;
+}
+ul.connect {
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+  background-color: mediumvioletred;
+  margin-left: 0;
+  padding-left: 0;
+}
+.hours-wrapper {
+  display: flex;
+}
+.location span {
+  display: flex;
+}
+.location {
+  display: flex;
+}
+.hours,
+.contact {
+  display: block;
+  margin-left: 0;
+  padding: 0;
+}
+.contact a {
+  text-decoration: underline;
+}
 
 /* styles that change
 --------------------*/
