--- a/styles/home.css
+++ b/styles/home.css
@@ -21,7 +21,7 @@ body {
 .fa {
   color: var(--white);
   font-size: 2.5rem;
-  display: block;
+  display: inline-block;
 }
 figure {
   display: block;
@@ -38,30 +38,32 @@ a {
 .header-wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .logo {
   display: block;
-  width: 200px;
-  margin: 0 auto;
+  width: 300px;
+  margin: 8px auto 0 auto;
 }
 .logo img {
   display: block;
-  width: 200px;
+  width: 300px;
 }
 nav.icons {
   display: flex;
   justify-content: space-between;
-  width: 82%;
-  margin: 0 auto;
-  background-color: aqua;
+  width: 100%;
+  /* background-color: aqua; */
 }
 .icon {
-  color: var(--purple);
+  color: var(--dark-purple);
 }
 .icons li {
   list-style: none;
 }
 nav.menu {
+  position: sticky;
+  top: 0;
   background-color: var(--magenta);
   color: var(--white);
   font-family: var(--proxima-soft);
@@ -70,6 +72,9 @@ nav.menu {
   display: flex;
   border-radius: 0 50px 0 0;
   margin-bottom: 0;
+}
+header {
+  display: inline;
 }
 .fa-bars {
   font-size: 1.875rem;
@@ -150,7 +155,7 @@ h2 {
   font-size: 1.25rem;
 }
 .clock {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -158,33 +163,50 @@ h2 {
 }
 .fa-clock {
   color: var(--white);
+  font-size: 1.5rem;
 }
-.button p {
+p.button {
+  font-size: 1.5rem;
   display: inline-block;
   text-align: center;
   border-radius: 15px;
-  background-color: #210759;
+  background-color: var(--dark-purple);
   color: var(--white);
   padding: 10px 50px;
+}
+p.button::after {
+  content: "\002A";
 }
 .clock span {
   margin-right: 15px;
 }
+#tour {
+  display: inline-block;
+  margin: 0 0 8px 0;
+}
+#tour::before {
+  content: "\002A";
+}
+#tickets {
+  display: inline-block;
+  margin: 0;
+}
 #ticketmaster {
   width: 150px;
   margin: 0 auto;
+  padding-bottom: 32px;
 }
 .bubble {
   font-family: var(--proxima-soft);
   font-size: 1.125rem;
   background-color: var(--white);
-  color: var(--purple);
+  color: var(--dark-purple);
   height: 150px;
   margin: 0 auto;
   border-radius: 50px;
 }
 .bubble a {
-  color: color: var(--purple);
+  color: var(--dark-purple);
 }
 h3 {
   padding-top: 24px;
@@ -194,13 +216,14 @@ h3 {
   font-family: var(--neue-haas);
   width: 200px;
   text-align: right;
+  margin-right: 16px;
 }
 .bubble span {
   color: var(--dark-purple);
 }
 .bubble div {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 .categories {
@@ -216,7 +239,6 @@ h3 {
   color: var(--white);
   text-align: center;
   height: 156px;
-  border-radius: 25px;
 }
 .color-box a {
   text-decoration: none;
@@ -253,7 +275,7 @@ h3 {
 }
 h4 {
   font-family: var(--proxima);
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   font-weight: bold;
   background-color: var(--dark-blue);
   color: var(--white);
@@ -275,6 +297,12 @@ h5 {
   text-align: left;
   font-family: var(--proxima);
   font-size: 1.125rem;
+  margin-top: 16px;
+  margin-bottom: 0;
+}
+.news p {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 div.news {
   width: 90%;
@@ -314,40 +342,50 @@ div.news {
   background-image: url(../images/newsletter.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  height: 360px;
+  margin-top: 32px;
+}
+.blur {
+  background-color: #ffffffa6;
+  margin-bottom: 0;
+  position: relative;
+  top: 200px;
 }
 section.newsletter {
   width: 90%;
   margin: 0 auto;
   text-align: center;
-}
-.blur {
-  background-color: #ffffffa6;
+  height: 140px;
 }
 .newsletter p {
   font-family: var(--neue-haas);
+  font-size: 0.875rem;
   font-weight: bold;
   text-transform: uppercase;
   text-align: left;
+  padding-top: 16px;
 }
 form.newsletter {
   display: flex;
   justify-content: center;
   height: 40px;
-  margin: 0 auto 16px auto;
+  margin: 0 auto;
 }
 #newsletter {
+  font-family: var(--sofia);
   font-size: 1.125rem;
   width: 70%;
   height: 40px;
-  border: 3px solid var(--purple);
+  border: 3px solid var(--dark-purple);
   padding-left: 20px;
 }
 #sign-up {
+  font-family: var(--sofia);
   font-size: 1.125rem;
   width: 30%;
   height: 40px;
-  border: 3px solid var(--purple);
-  background-color: var(--purple);
+  border: 3px solid var(--dark-purple);
+  background-color: var(--dark-purple);
   color: #fff;
 }
 
@@ -374,6 +412,9 @@ footer {
 .footer-container p {
   margin: 0;
 }
+.connect span {
+  font-size: 2rem;
+}
 ul.connect {
   display: flex;
   width: 90%;
@@ -387,15 +428,10 @@ ul.connect span {
 .hours-wrapper {
   display: flex;
 }
-.visit {
-  display: flex;
-  align-items: flex-end;
-}
-.map-link {
-  margin-left: 64px;
-}
 .fa-map-marker-alt {
-  margin-right: 8px;
+  font-size: 2rem;
+  margin-top: 16px;
+  margin-right: 16px;
 }
 .location span {
   display: flex;
@@ -405,6 +441,7 @@ ul.connect span {
 }
 .location p {
   text-decoration: underline;
+  margin-top: 16px;
 }
 .hours,
 .contact {
