css added to explore page

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,6 +2,7 @@
   --magenta: #a20067;
   --dark-purple: #210759;
   --purple: #470c68;
+  --light-purple: #7c68a6;
   --dark-blue: #003057;
   --dark-green: #034638;
   --blue: #007298;
