--- a/styles/explore.css
+++ b/styles/explore.css
@@ -1,1 +1,172 @@
-@import "imports/variables.css";
+@import "variables.css";
+
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+body {
+  background-color: var(--white);
+  color: 000;
+  font-family: var(--neue-haas);
+  font-size: 1rem;
+  width: 100%;
+  margin: 0;
+}
+.fa {
+  color: var(--white);
+  font-size: 2.5rem;
+  display: inline-block;
+}
+figure {
+  display: block;
+}
+img {
+  display: block;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
+/* header 
+--------------------*/
+
+/* main 
+--------------------*/
+.main-wrapper {
+  width: 100%;
+  margin: 0 auto;
+}
+section {
+  width: 90%;
+  background-color: var(--light-grey);
+  margin: 16px auto;
+}
+.margins {
+  width: 90%;
+  margin: 0 auto;
+}
+.margins > p {
+  padding-bottom: 16px;
+  margin-top: 0;
+}
+h1 {
+  font-family: var(--proxima);
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: var(--dark-purple);
+  color: #fff;
+  text-align: center;
+  padding: 8px;
+}
+h2,
+h3 {
+  font-family: var(--proxima-soft);
+  font-size: 1.5rem;
+  margin-bottom: 0;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+h4 {
+  font-family: var(--proxima-soft);
+  font-size: 1.25rem;
+  padding-top: 16px;
+}
+#intro {
+  font-weight: bold;
+  font-style: italic;
+}
+figure {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+img {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.get-in-touch {
+  background-color: #7c68a6;
+  color: #fff;
+  font-size: 1.125rem;
+  text-align: center;
+  border-radius: 0 15px 0 15px;
+}
+.get-in-touch > p {
+  font-family: var(--proxima);
+  font-weight: bold;
+  text-transform: capitalize;
+  padding-top: 16px;
+  margin: 16px 0;
+}
+p.button {
+  font-family: var(--sofia);
+  display: inline-block;
+  text-align: center;
+  border-radius: 15px;
+  background-color: var(--magenta);
+  color: var(--white);
+  padding: 8px 32px;
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+.newsletter-wrapper {
+  background-image: url(../images/newsletter.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 360px;
+  margin-top: 32px;
+  margin-bottom: 0;
+}
+.blur {
+  background-color: #ffffffa6;
+  margin-bottom: 0;
+  position: relative;
+  top: 200px;
+  margin-bottom: 0;
+}
+section.newsletter {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  height: 140px;
+}
+.newsletter p {
+  font-family: var(--neue-haas);
+  font-size: 0.875rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: left;
+  padding-top: 16px;
+}
+form.newsletter {
+  display: flex;
+  justify-content: center;
+  height: 40px;
+  margin: 0 auto;
+}
+#newsletter {
+  font-family: var(--sofia);
+  font-size: 1.125rem;
+  width: 70%;
+  height: 40px;
+  border: 3px solid var(--dark-purple);
+  padding-left: 20px;
+}
+#sign-up {
+  font-family: var(--sofia);
+  font-size: 1.125rem;
+  width: 30%;
+  height: 40px;
+  border: 3px solid var(--dark-purple);
+  background-color: var(--dark-purple);
+  color: #fff;
+}
+
+/* footer 
+--------------------*/
