--- a/styles/home.css
+++ b/styles/home.css
@@ -65,7 +65,7 @@ nav.icons {
   position: sticky;
   top: 0;
   z-index: 100;
-  background-color: #ffffffbf;
+  background-color: #ffffff;
   width: 100%;
   height: 62px;
 }
@@ -77,7 +77,7 @@ nav.menu {
   font-family: var(--proxima-soft);
   font-size: 1.5rem;
   display: flex;
-  border-radius: 0 50px 0 0;
+  border-radius: 0 30px 0 0;
   margin-bottom: 0;
 }
 header {
@@ -122,7 +122,9 @@ ul li {
   cursor: pointer;
 }
 #menu {
+  font-family: var(--proxima);
   display: inline-block;
+  font-weight: bold;
   padding-left: 20px;
 }
 #hamburger-menu {
