--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -1,5 +1,7 @@
 @import "variables.css";
 
+/* global styles
+--------------------*/
 html {
   box-sizing: border-box;
 }
@@ -60,23 +62,16 @@ nav.icons {
 .icons li {
   list-style: none;
 }
-.white-box {
+nav.menu {
   position: sticky;
   top: 0;
   z-index: 100;
-  background-color: #ffffff;
-  width: 100%;
-  height: 62px;
-}
-nav.menu {
-  position: relative;
-  top: 5px;
   background-color: var(--magenta);
   color: var(--white);
   font-family: var(--proxima-soft);
   font-size: 1.5rem;
   display: flex;
-  border-radius: 0 30px 0 0;
+  /* border-radius: 30px 0 30px 0; */
   margin-bottom: 0;
 }
 header {
@@ -157,7 +152,6 @@ h1 {
 h2 {
   text-align: center;
   font-size: 1.5rem;
-
   color: #fff;
   border-radius: 25px 25px 0 0;
   padding: 16px;
@@ -177,11 +171,10 @@ h2 {
 #ecology {
   background-color: var(--magenta);
 }
-
 div.card {
   width: 100%;
   min-height: 415px;
-  border-radius: 15px;
+  border-radius: 20px;
   box-shadow: 0 6px 12px #00000029;
   margin-bottom: 16px;
 }
@@ -195,7 +188,7 @@ figure.card {
   height: 415px;
   margin: 0 auto;
   border: 15px solid #fff;
-  border-radius: 15px;
+  border-radius: 20px;
   box-shadow: 0 6px 12px #00000029;
   margin-bottom: 32px;
 }
@@ -203,7 +196,7 @@ figure.card img {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  border-radius: 15px;
+  border-radius: 20px;
 }
 .cosmology {
   width: 90%;
@@ -340,6 +333,8 @@ h6 {
   margin: 32px 0 16px 0;
 }
 #copyright {
+  font-family: var(--neue-haas);
+  font-weight: bold;
   display: block;
   text-align: center;
   margin: 0;
@@ -348,4 +343,5 @@ h6 {
 #copyright::before {
   content: "\00A9";
   padding-right: 5px;
+  font-weight: bold;
 }
