--- a/styles/explore.css
+++ b/styles/explore.css
@@ -59,23 +59,16 @@ nav.icons {
 .icons li {
   list-style: none;
 }
-.white-box {
+nav.menu {
   position: sticky;
   top: 0;
   z-index: 100;
-  background-color: #ffffff;
-  width: 100%;
-  height: 62px;
-}
-nav.menu {
-  position: relative;
-  top: 5px;
   background-color: var(--magenta);
   color: var(--white);
   font-family: var(--proxima-soft);
   font-size: 1.5rem;
   display: flex;
-  border-radius: 0 30px 0 0;
+  /* border-radius: 30px 0 30px 0; */
   margin-bottom: 0;
 }
 header {
@@ -346,6 +339,8 @@ h6 {
   margin: 32px 0 16px 0;
 }
 #copyright {
+  font-family: var(--neue-haas);
+  font-weight: bold;
   display: block;
   text-align: center;
   margin: 0;
@@ -354,4 +349,5 @@ h6 {
 #copyright::before {
   content: "\00A9";
   padding-right: 5px;
+  font-weight: bold;
 }
