--- a/styles/home.css
+++ b/styles/home.css
@@ -62,22 +62,20 @@ nav.icons {
   list-style: none;
 }
 .white-box {
-  position: sticky;
-  top: 0;
-  z-index: 100;
   background-color: #ffffff;
   width: 100%;
   height: 62px;
 }
 nav.menu {
-  position: relative;
-  top: 5px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
   background-color: var(--magenta);
   color: var(--white);
   font-family: var(--proxima-soft);
   font-size: 1.5rem;
   display: flex;
-  border-radius: 0 30px 0 0;
+  /* border-radius: 30px 0 30px 0; */
   margin-bottom: 0;
 }
 header {
@@ -473,6 +471,8 @@ h6 {
   margin: 32px 0 16px 0;
 }
 #copyright {
+  font-family: var(--neue-haas);
+  font-weight: bold;
   display: block;
   text-align: center;
   margin: 0;
@@ -481,6 +481,7 @@ h6 {
 #copyright::before {
   content: "\00A9";
   padding-right: 5px;
+  font-weight: bold;
 }
 
 /* styles that change
