--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -51,8 +51,9 @@ a {
 }
 nav.icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
+  margin: 16px 0;
   /* background-color: aqua; */
 }
 .icon {
@@ -148,8 +149,7 @@ h1 {
   text-align: center;
   background-color: var(--dark-purple);
   color: #fff;
-  padding: 8px;
-  border-radius: 0 15px 0 15px;
+  padding: 12px;
   padding-left: 5%;
 }
 div.vision {
@@ -161,7 +161,7 @@ div.vision {
 div.blue {
   background-color: var(--blue);
   color: #fff;
-  border-radius: 15px 0 15px 0;
+  border-radius: 15px 0;
 }
 div.vision p {
   width: 90%;
@@ -171,7 +171,7 @@ div.vision p {
 figure.vision {
   width: 100%;
   height: 250px;
-  margin: 0 auto;
+  margin: 0 auto 16px auto;
 }
 .vision img {
   width: 100%;
@@ -242,8 +242,15 @@ h4 {
   font-size: 1.25rem;
   background-color: var(--dark-purple);
   color: #fff;
-  padding: 8px;
+  padding: 12px;
   margin: 32px auto 0 auto;
+  border-radius: 50px 0;
+}
+h5 {
+  font-size: 1rem;
+  margin-left: 5%;
+  margin-bottom: 8px;
+  margin-top: 0;
 }
 p.tourguides {
   font-family: var(--sofia);
@@ -253,7 +260,7 @@ p.tourguides {
   color: #fff;
   padding: 8px;
   margin-bottom: 16px;
-  border-radius: 50px 0;
+  border-radius: 0 50px;
 }
 .newsletter-wrapper {
   background-image: url(../images/newsletter.jpg);
