--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -52,8 +52,9 @@ a {
 }
 nav.icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
+  margin: 16px 0;
   /* background-color: aqua; */
 }
 .icon {
@@ -145,7 +146,7 @@ h1 {
   text-transform: capitalize;
   background-color: var(--dark-purple);
   color: #fff;
-  padding: 8px;
+  padding: 12px;
   border-radius: 0 15px 0 15px;
   padding-left: 5%;
 }
