--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -51,8 +51,9 @@ a {
 }
 nav.icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
+  margin: 16px 0;
   /* background-color: aqua; */
 }
 .icon {
